:bug: image text showing now
still way too big

--- a/src/Image.css
+++ b/src/Image.css
@@ -8,7 +8,6 @@
   position: relative;
   touch-action: none;
   cursor: grab;
-  z-index: 10000;
   user-select: none;
 }
 
